2011-05-15  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (common-lisp-indent-function-1): Better #+
	support.
	(common-lisp-loop-part-indentation): Make newline-and-indent work better
	with non-subclause-aware loop indentation.

2011-05-15  Didier Verna  <didier@xemacs.org>

	* slime-cl-indent.el (test-lisp-indent): Make sure
	indent-tabs-mode is nil in the test buffer. Otherwise, spaces may
	be converted into tabs which would make the tests fail.

2011-05-15  Didier Verna  <didier@xemacs.org>

	* slime-cl-indent.el (lisp-indent-tagbody):
	(lisp-indent-lambda-list): Use back-to-indentation.

2011-05-14  Nikodemus Siivola  <nikodemus@solipsist>

	* slime-cl-indent.el (common-lisp-indent-if*-keyword):
	(common-lisp-indent-if*, common-lisp-indent-if*-1):
	(common-lisp-indent-if*-advance-past-keyword-on-line): IF*
	indentation code from Gabor Melis. It should be noted that this
	should not be considered an endorsement on IF* by the commiter,
	but rather an act of compassion to all who labor under its shadow.
	(run-lisp-indent-tests): Test-case for IF* indentation.

2011-05-12  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (lisp-indent-lambda-list): Use sexp-based
	traversal instead of regular expressions to figure out how to
	indent lambda-lists. Allows indenting destructuring lambda-lists correctly:
	previously we could align to a keyword in a previous sublist, instead
	of the sublist itself.
	(lisp-indent-lambda-list-keywords-regexp): Add support for non-standard &more.
	(test-lisp-indent, run-lisp-indent-tests): Rudimentary tests.
	(lisp-indent-259): Use lambda-list-indentation even if the CDR of the path
	isn't null: this allows correct indentation of destructuring sublists.
	(run-lisp-indent-tests): More test-cases.

2011-05-11  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (common-lisp-indent-function-1): Handle
	#+ and #-. Also support the SBCL idiom of #!+ #!-.
